--- a/prepros.cfg
+++ b/prepros.cfg
@@ -115,6 +115,84 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "ef7740af": {
+          "id": "ef7740af",
+          "path": "imgs/assets/icons/emergency.png",
+          "output": "imgs/assets/icons/emergency.png",
+          "name": "emergency.png",
+          "category": "IMAGE",
+          "size": 4425,
+          "type": "png",
+          "initialSize": 4425,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "1cdfc4fd": {
+          "id": "1cdfc4fd",
+          "path": "imgs/assets/icons/print.png",
+          "output": "imgs/assets/icons/print.png",
+          "name": "print.png",
+          "category": "IMAGE",
+          "size": 4085,
+          "type": "png",
+          "initialSize": 4085,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "1cdbf9a0": {
+          "id": "1cdbf9a0",
+          "path": "imgs/assets/icons/time.png",
+          "output": "imgs/assets/icons/time.png",
+          "name": "time.png",
+          "category": "IMAGE",
+          "size": 8613,
+          "type": "png",
+          "initialSize": 8613,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "cd934f0c": {
+          "id": "cd934f0c",
+          "path": "imgs/assets/icons/add.png",
+          "output": "imgs/assets/icons/add.png",
+          "name": "add.png",
+          "category": "IMAGE",
+          "size": 3007,
+          "type": "png",
+          "initialSize": 3007,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "399b1f16": {
+          "id": "399b1f16",
+          "path": "imgs/01 Übersicht und Planung_Start gefüllt-01.png",
+          "output": "imgs/01 Übersicht und Planung_Start gefüllt-01.png",
+          "name": "01 Übersicht und Planung_Start gefüllt-01.png",
+          "category": "IMAGE",
+          "size": 120464,
+          "type": "png",
+          "initialSize": 120464,
+          "optimized": false,
+          "height": 1080,
+          "width": 1920
+        },
+        "43eac1f9": {
+          "id": "43eac1f9",
+          "path": "imgs/assets/icons/surgery.png",
+          "output": "imgs/assets/icons/surgery.png",
+          "name": "surgery.png",
+          "category": "IMAGE",
+          "size": 5361,
+          "type": "png",
+          "initialSize": 5361,
+          "optimized": false,
+          "height": 400,
+          "width": 400
         }
       },
       "deploymentHistory": {},
