--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,17 +9,6 @@
       "name": "OP-Management",
       "path": "",
       "files": {
-        "0ffc35d4": {
-          "id": "0ffc35d4",
-          "path": "index.html",
-          "output": "index.html",
-          "name": "index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "cd3ebc1f": {
           "id": "cd3ebc1f",
           "path": "styles/normalize.css",
@@ -36,76 +25,11 @@
           "parents": [],
           "type": "css"
         },
-        "1aefa9b3": {
-          "id": "1aefa9b3",
-          "path": "styles/style.css",
-          "output": "styles/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "2a0b4710": {
           "id": "2a0b4710",
           "path": "scripts/libaries/jquery.js",
           "output": "scripts/libaries/jquery-dist.js",
           "name": "jquery.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "b2692a16": {
-          "id": "b2692a16",
-          "path": "styles/style.scss",
-          "output": "styles/style.css",
-          "name": "style.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": true,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "a56c64e7": {
-          "id": "a56c64e7",
-          "path": "scripts/setup.js",
-          "output": "scripts/setup-dist.js",
-          "name": "setup.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "b36d31c0": {
-          "id": "b36d31c0",
-          "path": "scripts/function.js",
-          "output": "scripts/function-dist.js",
-          "name": "function.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -193,6 +117,292 @@
           "optimized": false,
           "height": 400,
           "width": 400
+        },
+        "eed93910": {
+          "id": "eed93910",
+          "path": "imgs/assets/icons/message.png",
+          "output": "imgs/assets/icons/message.png",
+          "name": "message.png",
+          "category": "IMAGE",
+          "size": 4752,
+          "type": "png",
+          "initialSize": 4752,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "60f14aeb": {
+          "id": "60f14aeb",
+          "path": "imgs/assets/icons/statistic.png",
+          "output": "imgs/assets/icons/statistic.png",
+          "name": "statistic.png",
+          "category": "IMAGE",
+          "size": 7522,
+          "type": "png",
+          "initialSize": 7522,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "58fb0a2d": {
+          "id": "58fb0a2d",
+          "path": "imgs/assets/icons/barchart.png",
+          "output": "imgs/assets/icons/barchart.png",
+          "name": "barchart.png",
+          "category": "IMAGE",
+          "size": 2954,
+          "type": "png",
+          "initialSize": 2954,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "03b61adc": {
+          "id": "03b61adc",
+          "path": "imgs/assets/icons/schedule.png",
+          "output": "imgs/assets/icons/schedule.png",
+          "name": "schedule.png",
+          "category": "IMAGE",
+          "size": 2939,
+          "type": "png",
+          "initialSize": 2939,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "963b495e": {
+          "id": "963b495e",
+          "path": "imgs/assets/icons/person.png",
+          "output": "imgs/assets/icons/person.png",
+          "name": "person.png",
+          "category": "IMAGE",
+          "size": 5068,
+          "type": "png",
+          "initialSize": 5068,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "ee5f2877": {
+          "id": "ee5f2877",
+          "path": "styles/styleAlt.css",
+          "output": "styles/styleAlt-dist.css",
+          "name": "styleAlt.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "9a32082d": {
+          "id": "9a32082d",
+          "path": "styles/styleAlt.scss",
+          "output": "styles/styleAlt.css",
+          "name": "styleAlt.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "01ab4b95": {
+          "id": "01ab4b95",
+          "path": "scripts/functionAlt.js",
+          "output": "scripts/functionAlt-dist.js",
+          "name": "functionAlt.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e7369c5b": {
+          "id": "e7369c5b",
+          "path": "indexAlt.html",
+          "output": "indexAlt.html",
+          "name": "indexAlt.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0ffc35d4": {
+          "id": "0ffc35d4",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "b2692a16": {
+          "id": "b2692a16",
+          "path": "styles/style.scss",
+          "output": "styles/style.css",
+          "name": "style.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "04ce414b": {
+          "id": "04ce414b",
+          "path": "styles/_color.scss",
+          "output": "styles/_color.css",
+          "name": "_color.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b2692a16"
+          ],
+          "type": "sass"
+        },
+        "5be9e820": {
+          "id": "5be9e820",
+          "path": "styles/_structure.scss",
+          "output": "styles/_structure.css",
+          "name": "_structure.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b2692a16"
+          ],
+          "type": "sass"
+        },
+        "3760f260": {
+          "id": "3760f260",
+          "path": "styles/_z-index.scss",
+          "output": "styles/_z-index.css",
+          "name": "_z-index.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b2692a16"
+          ],
+          "type": "sass"
+        },
+        "1aefa9b3": {
+          "id": "1aefa9b3",
+          "path": "styles/style.css",
+          "output": "styles/style-dist.css",
+          "name": "style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "de3509d1": {
+          "id": "de3509d1",
+          "path": "styles/_reset.scss",
+          "output": "styles/_reset.css",
+          "name": "_reset.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b2692a16"
+          ],
+          "type": "sass"
+        },
+        "d3a48a2f": {
+          "id": "d3a48a2f",
+          "path": "scripts/setupAlt Kopie.js",
+          "output": "scripts/setupAlt Kopie-dist.js",
+          "name": "setupAlt Kopie.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "a56c64e7": {
+          "id": "a56c64e7",
+          "path": "scripts/setup.js",
+          "output": "scripts/setup-dist.js",
+          "name": "setup.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
