Struktur, Farben, Container

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -403,6 +403,90 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "b36d31c0": {
+          "id": "b36d31c0",
+          "path": "scripts/function.js",
+          "output": "scripts/function-dist.js",
+          "name": "function.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "99915afd": {
+          "id": "99915afd",
+          "path": "backup.html",
+          "output": "backup.html",
+          "name": "backup.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "d1fda090": {
+          "id": "d1fda090",
+          "path": "backupStyles.html",
+          "output": "backupStyles.html",
+          "name": "backupStyles.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6a50804a": {
+          "id": "6a50804a",
+          "path": "imgs/assets/icons/arrow-right.png",
+          "output": "imgs/assets/icons/arrow-right.png",
+          "name": "arrow-right.png",
+          "category": "IMAGE",
+          "size": 2807,
+          "type": "png",
+          "initialSize": 2807,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "8059a6fc": {
+          "id": "8059a6fc",
+          "path": "imgs/assets/icons/arrow-left.png",
+          "output": "imgs/assets/icons/arrow-left.png",
+          "name": "arrow-left.png",
+          "category": "IMAGE",
+          "size": 2754,
+          "type": "png",
+          "initialSize": 2754,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "ddd707a3": {
+          "id": "ddd707a3",
+          "path": "styles/_center-view-schedule.scss",
+          "output": "styles/_center-view-schedule.css",
+          "name": "_center-view-schedule.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b2692a16"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
