--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "main": "index.html",
   "window": {
     "title": "OP-Management Software",
-    "toolbar": false
+    "toolbar": false,
+    "width": 1360,
+    "height": 800,
+    //"width": 1240,
+    //"height": 700,
+    "min_width": 640,
+    "min_height": 400
   }
 }
