--- a/prepros.cfg
+++ b/prepros.cfg
@@ -487,6 +487,32 @@
             "b2692a16"
           ],
           "type": "sass"
+        },
+        "9c02bedb": {
+          "id": "9c02bedb",
+          "path": "scripts/getData.js",
+          "output": "scripts/getData-dist.js",
+          "name": "getData.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "7da4c89f": {
+          "id": "7da4c89f",
+          "path": "cards.html",
+          "output": "cards.html",
+          "name": "cards.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
